[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Enemies/EnemyHitzone.gd" type="Script" id=1]

[node name="BaseEnemyHitzone" type="Area2D"]
script = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_BaseEnemyHitzone_body_entered"]
